src/widgets/snapshots/lt__widgets__tab_widget__tests__empty_state.snap
---
source: src/widgets/tab_widget.rs
expression: terminal.backend()
---
" <tab> to change view:    My Issues                                       "
"                                                                           "
