src/widgets/snapshots/lt__widgets__tab_widget__tests__multi_tabs.snap
---
source: src/widgets/tab_widget.rs
expression: terminal.backend()
---
" <tab> to change view:    My Issues      Custom A      Custom B         "
"                                                                           "
